--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -5,17 +5,30 @@
 
         <meta name="robots" content="noindex, nofollow">
 
+        <title>Page d'accueil</title>
         <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-        <meta name="description" content="Cherche une annonce de voiture parmi notre catalogue">
-        <link rel="stylesheet" href="{{ asset('assets/bootstrap/css/bootstrap.min.css') }}">
-        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Nunito+Sans:400,600">
-        <link rel="stylesheet" href="{{ asset('assets/fonts/fontawesome-all.min.css') }}">
-        <link rel="stylesheet" href="{{ asset('assets/fonts/font-awesome.min.css') }}">
-        <link rel="stylesheet" href="{{ asset('assets/fonts/fontawesome5-overrides.min.css') }}">
-        <link rel="stylesheet" href="https://unpkg.com/swiper/css/swiper.css">
-        <link rel="stylesheet" href="{{ asset('assets/css/styles.min.css') }}">
+        <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,700&display=swap" rel="stylesheet">
+
+        <link rel="stylesheet" href="{{ asset('assets/css/open-iconic-bootstrap.min.css') }}">
+        <link rel="stylesheet" href="{{ asset('assets/css/animate.css') }}">
+
+        <link rel="stylesheet" href="{{ asset('assets/css/owl.carousel.min.css') }}">
+        <link rel="stylesheet" href="{{ asset('assets/css/owl.theme.default.min.cs') }}s">
+        <link rel="stylesheet" href="{{ asset('assets/css/magnific-popup.css') }}">
+
+        <link rel="stylesheet" href="{{ asset('assets/css/aos.css') }}">
+
+        <link rel="stylesheet" href="{{ asset('assets/css/ionicons.min.css') }}">
+
+        <link rel="stylesheet" href="{{ asset('assets/css/bootstrap-datepicker.css') }}">
+        <link rel="stylesheet" href="{{ asset('assets/css/jquery.timepicker.css') }}">
+
+
+        <link rel="stylesheet" href="{{ asset('assets/css/flaticon.css') }}">
+        <link rel="stylesheet" href="{{ asset('assets/css/icomoon.css') }}">
+        <link rel="stylesheet" href="{{ asset('assets/css/style.css') }}">
 
     {% endblock %}
     <title>{% block title %}Welcome!{% endblock %}</title>
@@ -26,24 +39,85 @@
 {% include '_navbar.html.twig' %}
 {% block body %}{% endblock %}
 
-<div class="footer-basic">
-    <footer>
-        <ul class="list-inline">
-            <li class="list-inline-item"><a href="{{ path('home') }}">Accueil</a></li>
-            <li class="list-inline-item"><a href="{{ path('annonces') }}">Recherche</a></li>
-            <li class="list-inline-item"><a href="#">Condtions générales</a></li>
-            <li class="list-inline-item"><a href="#">Politique de confidentialité</a></li>
-        </ul>
-        <p class="copyright">Company Name © 2019</p>
-    </footer>
-</div>
+<div id="ftco-loader" class="show fullscreen"><svg class="circular" width="48px" height="48px">
+        <circle class="path-bg" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke="#eeeeee" />
+        <circle class="path" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke-miterlimit="10"
+                stroke="#F96D00" /></svg></div>
+
+
+
+<footer class="ftco-footer ftco-bg-dark ftco-section">
+    <div class="container">
+        <div class="row mb-5">
+            <div class="col-md">
+                <div class="ftco-footer-widget mb-4">
+                    <h2 class="ftco-heading-2">PubAuto</h2>
+                    <p>Pubauto est un site d'annonces publiant les annonces de partenaires</p>
+                </div>
+            </div>
+            <div class="col-md">
+                <div class="ftco-footer-widget mb-4">
+                    <h2 class="ftco-heading-2">Particuliers</h2>
+                    <ul class="list-unstyled">
+                        <li><a href="{{ path('annonces') }}" class="pb-1 d-block">Parcourir les annonces</a></li>
+                        <li><a href="#" class="pb-1 d-block">Nous contacter</a></li>
+                    </ul>
+                </div>
+            </div>
+            <div class="col-md">
+                <div class="ftco-footer-widget mb-4 ml-md-4">
+                    <h2 class="ftco-heading-2">Professionnels</h2>
+                    <ul class="list-unstyled">
+                        <li><a href="{{ path('annonces') }}" class="pb-1 d-block">Parcourir les annonces</a></li>
+                        <li><a href="{{ path('deposer') }}" class="pb-1 d-block">Déposer une annonce</a></li>
+                    </ul>
+                </div>
+            </div>
+            <div class="col-md">
+                <div class="ftco-footer-widget mb-4">
+                    <h2 class="ftco-heading-2">Avez-vous une question ?</h2>
+                    <div class="block-23 mb-3">
+                        <ul>
+                            <li><a href="#"><span class="icon icon-phone"></span><span class="text">+2 392 3929
+											210</span></a></li>
+                            <li><a href="#"><span class="icon icon-envelope"></span><span
+                                            class="text">contact@mail.com</span></a></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-12 text-center">
+
+                <p>
+                    Copyright &copy;<script>
+                        document.write(new Date().getFullYear());
+                    </script> Mention légales | Conditions générales
+                </p>
+            </div>
+        </div>
+    </div>
+</footer>
 
 {% block javascripts %}
-    <script src="{{ asset('assets/js/jquery.min.js') }}"></script>
-    <script src="{{ asset('assets/bootstrap/js/bootstrap.min.js') }}"></script>
 
-    <script src="https://unpkg.com/swiper/js/swiper.min.js"></script>
-    <script src="{{ asset('assets/js/script.min.js') }}"></script>
+    <script src="{{ asset('assets/js/jquery.min.js') }}"></script>
+    <script src="{{ asset('assets/js/jquery-migrate-3.0.1.min.js') }}"></script>
+    <script src="{{ asset('assets/js/popper.min.js') }}"></script>
+    <script src="{{ asset('assets/js/bootstrap.min.js') }}"></script>
+    <script src="{{ asset('assets/js/jquery.easing.1.3.js') }}"></script>
+    <script src="{{ asset('assets/js/jquery.waypoints.min.js') }}"></script>
+    <script src="{{ asset('assets/js/jquery.stellar.min.js') }}"></script>
+    <script src="{{ asset('assets/js/owl.carousel.min.js') }}"></script>
+    <script src="{{ asset('assets/js/jquery.magnific-popup.min.js') }}"></script>
+    <script src="{{ asset('assets/js/aos.js') }}"></script>
+    <script src="{{ asset('assets/js/jquery.animateNumber.min.js') }}"></script>
+    <script src="{{ asset('assets/js/scrollax.min.js') }}"></script>
+    <script src="{{ asset('assets/js/google-map.js') }}"></script>
+    <script src="{{ asset('assets/js/main.js') }}"></script>
+
+    <script src="https://kit.fontawesome.com/310dd10bf3.js" crossorigin="anonymous"></script>
 
 {% endblock %}
 </body>
