--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -14442,3 +14442,35 @@ textarea.form-control {
     height: 8rem;
   }
 }
+
+.card-header{
+  background-color: transparent !important;
+  border-bottom: 0;
+}
+
+.category-title{
+  font-size: 1.5rem !important;
+}
+
+.nav-tabs .nav-link{
+  color: #718096;
+}
+
+.nav-tabs .nav-link {
+  border: 1px solid transparent;
+  border-top-left-radius: 0.25rem;
+  border-top-right-radius: 0.25rem;
+}
+
+.nav-tabs .nav-link.active, .nav-tabs .nav-item.show .nav-link {
+  color: #495057;
+  background-color: #fff;
+  border-color: #fff #fff #2D3748;
+}
+
+.breadcrumb{background-color: transparent}
+
+.a-title{
+  font-size: 1.5rem;
+  color:#1A202C;
+}
