--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -29,6 +29,8 @@
         <link rel="stylesheet" href="{{ asset('assets/css/flaticon.css') }}">
         <link rel="stylesheet" href="{{ asset('assets/css/icomoon.css') }}">
         <link rel="stylesheet" href="{{ asset('assets/css/style.css') }}">
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-select@1.13.9/dist/css/bootstrap-select.min.css">
+
 
     {% endblock %}
     <title>{% block title %}Welcome!{% endblock %}</title>
@@ -118,6 +120,7 @@
     <script src="{{ asset('assets/js/main.js') }}"></script>
 
     <script src="https://kit.fontawesome.com/310dd10bf3.js" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap-select@1.13.9/dist/js/bootstrap-select.min.js"></script>
 
 {% endblock %}
 </body>
